--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ h3,
 .tab h2 {
     margin-left: 12%;
     font-size: 5vw;
+    position: relative;
+    z-index: 99;
 }
 .table_name h3 {
     margin-left: 24%;
