--- a/style.css
+++ b/style.css
@@ -74,6 +74,16 @@ h3,
     left: 8%;
     display: none;
 }
-.questiontoggle {
+.question_open {
     display: block;
+}
+.question_answer_window {
+    display: none;
+    width: 80%;
+    height: 25%;
+    position: absolute;
+    z-index: 11;
+    top: 55%;
+    background-color: white;
+    left: 8%;
 }
