--- a/style.css
+++ b/style.css
@@ -7,25 +7,82 @@ body {
     padding: 0;
 }
 
+/*-- INTRO TIL BYVANDRING --*/
+
+.loadingscreen {
+    top: 0;
+    display: none;
+    position: absolute;
+    z-index: 999999999;
+    width: 100%;
+    height: 100%;
+}
+.bg {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    z-index: 9999999;
+}
+.logo {
+    background-image: url(img/logo.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    z-index: 99999999;
+    width: 60vw;
+    height: 32vw;
+    margin: 20%;
+    margin-top: 75%;
+}
+.creategroup {
+    top: 0;
+    display: block;
+    position: absolute;
+    z-index: 999999;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+.creategroup h2 {
+    margin-left: 28%;
+    margin-top: 59%;
+    font-family: monospace;
+}
+#done {
+    margin-left: 43%;
+    margin-top: 10%;
+    font-family: monospace;
+}
+.creategroup input {
+    margin-left: 15%;
+    width: 70%;
+    background-color: #d9d7d7;
+    height: 5%;
+    margin-top: 5%;
+    color: white;
+    text-align: center;
+}
+
 /*-- GOOGLE MAP --*/
 
 #map {
-    height: 95%;
+    height: 100%;
     width: 100%;
-    margin-top: 5vw;
+    margin-top: 0;
 }
 
 /*-- SCORE --*/
 
 .score_button {
-    width: 20vw;
-    height: 20vw;
+    width: 25vw;
+    height: 25vw;
     background-image: url("img/kort-05.svg");
     background-size: contain;
     position: absolute;
     z-index: 10;
-    top: 85%;
-    left: 73%;
+    top: 84%;
+    left: 70%;
 }
 .scoreboard {
     width: 80%;
@@ -67,14 +124,14 @@ h3,
 /*-- QUESTION --*/
 
 .question_button {
-    width: 20vw;
-    height: 20vw;
+    width: 25vw;
+    height: 25vw;
     background-image: url("img/kort-06.svg");
     background-size: contain;
     position: absolute;
     z-index: 10;
-    top: 85%;
-    left: 50%;
+    top: 84%;
+    left: 41%;
     display: none;
 }
 .questionboard {
