--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ body {
     background-color: white;
     left: 10%;
     display: none;
+    margin-top: -5vw;
+    margin-left: 4vw;
 }
 .scoretoggle {
     display: block;
@@ -103,6 +105,11 @@ h3,
 .points {
     display: inline-block;
 }
+.groups,
+.points p {
+    font-size: 5vw;
+    margin-left: 14vw;
+}
 .tab h2 {
     margin-left: 14%;
     font-size: 5vw;
@@ -110,15 +117,45 @@ h3,
     z-index: 99;
     font-family: 'Roboto', sans-serif;
 }
+.tab h2:hover {
+    color: #a5a59a;
+}
+.table_name th {
+    /*    padding: 7vw;*/
+    text-align: left;
+}
 .table_name {
     font-family: 'Roboto', sans-serif;
-    margin-left: 24%;
     font-size: 3vw;
+    margin-left: 11vw;
+    margin-top: 5vw;
 }
-.groups,
-.points p {
-    font-size: 5vw;
-    margin-left: 14vw;
+.data_gruppe {
+    /*!!*/
+    padding-right: 20vw;
+    border-bottom: 1px solid #dbe3e6;
+}
+.data_points {
+    padding-left: 17vw;
+    padding: 3vw;
+    border-bottom: 1px solid #dbe3e6;
+    margin-bottom: 10vw;
+}
+.gruppe_wrap {
+    width: 30vw;
+    height: 0.3vw;
+    background-color: #bdc1c1;
+    position: absolute;
+    margin-top: 12vw;
+    left: 8vw;
+}
+.firma_wrap {
+    width: 30vw;
+    height: 0.3vw;
+    margin-top: 12vw;
+    left: 43vw;
+    background-color: #bdc1c1;
+    position: absolute;
 }
 
 /*-- QUESTION --*/
@@ -134,6 +171,24 @@ h3,
     left: 41%;
     display: none;
 }
+.question_button_animation {
+    animation: bounce 2s infinite;
+}
+@keyframes bounce {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
+}
 .questionboard {
     width: 80%;
     height: 50%;
@@ -143,65 +198,109 @@ h3,
     background-color: white;
     left: 8%;
     display: none;
+    font-family: 'Roboto', sans-serif;
 }
 .question_open {
     display: block;
 }
+.question_wrap {
+    width: 80%;
+    height: 0.3vw;
+    margin-top: 9%;
+    left: 10%;
+    background-color: #bdc1c1;
+    position: absolute;
+}
+.data_qtitle {
+    text-align: center;
+}
+.data_question {
+    margin-left: 20%;
+    margin-top: 7vw;
+}
+.a1_wrap {
+    width: 85%;
+    height: 12%;
+    background-color: #ededed;
+    position: absolute;
+    margin-top: 37%;
+    margin-left: 6%;
+    z-index: -1;
+}
+.a2_wrap {
+    width: 85%;
+    height: 12%;
+    background-color: #ededed;
+    position: absolute;
+    margin-top: 53%;
+    margin-left: 6%;
+    z-index: -1;
+}
+.a3_wrap {
+    width: 85%;
+    height: 12%;
+    background-color: #ededed;
+    position: absolute;
+    margin-top: 70%;
+    margin-left: 6%;
+    z-index: -1;
+}
+.a4_wrap {
+    width: 85%;
+    height: 12%;
+    background-color: #ededed;
+    position: absolute;
+    margin-top: 87%;
+    margin-left: 6%;
+    z-index: -1;
+}
+.data_a1 {
+    /*    background-color: #ededed;*/
+    padding: 6%;
+    text-align: center;
+}
+.data_a2 {
+    /*    background-color: #ededed;*/
+    padding: 4%;
+    text-align: center;
+}
+.data_a3 {
+    /*    background-color: #ededed;*/
+    padding: 4%;
+    text-align: center;
+}
+.data_a4 {
+    /*    background-color: #ededed;*/
+    padding: 7%;
+    text-align: center;
+}
+
+/*TAK FOR SVARET*/
+
 .question_answer_window {
     display: none;
     width: 80%;
-    height: 25%;
+    height: 20%;
     position: absolute;
     z-index: 11;
     top: 55%;
     background-color: white;
     left: 8%;
+    margin-left: 4vw;
+    font-family: 'Roboto', sans-serif;
 }
-
-/* -- GPS -- */
-
-.gps {
-    left: 50vw;
-    top: 80vw;
+.question_answer_window h2 {
+    text-align: center;
+}
+.question_answer_window p {
+    text-align: center;
+    padding: 6vw;
+}
+.svar_wrap {
+    width: 85%;
+    height: 0.3%;
+    margin-left: 7%;
+    margin-top: 13%;
     position: absolute;
-    z-index: 999999;
-    display: none;
-}
-.gps .white {
-    background-image: url("img/kort_dig.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 10vw;
-    height: 10vw;
-    /*    margin-top: 50vw;*/
-    position: absolute;
-}
-.gps .blue {
-    background-image: url("img/kort_dig2.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 8vw;
-    height: 8vw;
-    position: absolute;
-    margin-top: 1vw;
-    margin-left: 1vw;
-    -webkit-animation: pulsate 2s ease-out;
-    -webkit-animation-iteration-count: infinite;
-    opacity: 0.0
-}
-@-webkit-keyframes pulsate {
-    0% {
-        -webkit-transform: scale(0.1, 0.1);
-        opacity: 0.0;
-    }
-    30% {
-        opacity: 1.0;
-    }
-    60% {
-        -webkit-transform: scale(1.2, 1.2);
-        opacity: 0.0;
-    }
-    100% {
-        opacity: 0.0;
-    }
+    background-color: #ededed;
 }
